Seeing if styling .answer-option:active the same as .answer-option will prevent coloring on mobile after selected

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -40,7 +40,7 @@
     font-size: 1.2rem; 
 }
 
-.answer-option {
+.answer-option, .answer-option:active {
     border-radius: 5px; 
     background-color: rgba(100,100,150,1.0); 
     color: #fff; 
